can move, some issues yet

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
         <!--create button to launch play()-->
         <button onclick="play();">Play</button>
         <canvas id="canvas" width="1400" height="600"></canvas>
-        <script type="text/javascript" src="scripts/main.js"></script>
+        <script type="text/javascript" src="./js/main.js"></script>
     </body>
 </html>
