end of the game

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,12 @@
         <link rel="stylesheet" type="text/css" href="style/style.css">
     </head>
     <body>
+        <h1 id="title">Tower of Hanoï</h1>
+        <h2 id="won">You won ! </h2>
         <input type="number" name="number" min="3" max="7" value="3" id="'towers"/>
         <!--create button to launch play()-->
         <button onclick="play();">Play</button>
-        <canvas id="canvas" width="1400" height="600"></canvas>
+        <canvas id="canvas" width="1400" height="500"></canvas>
         <script type="text/javascript" src="./js/main.js"></script>
     </body>
 </html>
