--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>
-			Tower of Hanoï
-		</title>
-		 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link rel="stylesheet" type="text/css" href="style/style.css">
+        <title>Tower of Hanoï</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <link rel="stylesheet" type="text/css" href="style/style.css" />
     </head>
     <body>
         <h1 id="title">Tower of Hanoï</h1>
-        <h2 id="won">You won ! </h2>
-        <input type="number" name="number" min="3" max="7" value="3" id="'towers"/>
-        <!--create button to launch play()-->
+        <h2 id="won">You won !</h2>
+        <input
+            type="number"
+            name="number"
+            min="1"
+            max="7"
+            value="3"
+            id="'towers"
+        />
         <button onclick="play();">Play</button>
         <canvas id="canvas" width="1400" height="500"></canvas>
+        <canvas id="canvas2" width="1400" height="20"></canvas>
         <script type="text/javascript" src="./js/main.js"></script>
     </body>
 </html>
