--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Tower of Hanoï</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link rel="stylesheet" type="text/css" href="style/style.css" />
-    </head>
-    <body>
-        <h1 id="title">Tower of Hanoï</h1>
-        <h2 id="won">You won !</h2>
-        <input
-            type="number"
-            name="number"
-            min="1"
-            max="7"
-            value="3"
-            id="'towers"
-        />
-        <button onclick="play();">Play</button>
-        <canvas id="canvas" width="1400" height="500"></canvas>
-        <canvas id="canvas2" width="1400" height="20"></canvas>
-        <script type="text/javascript" src="./js/main.js"></script>
-    </body>
+
+<head>
+    <title>Tower of Hanoï</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+</head>
+
+<body>
+    <h1 id="title">Tower of Hanoï</h1>
+    <h2 id="won">You won !</h2>
+    <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
+    <button id="play">Play</button>
+    <div id="pic1"></div>
+    <div id="pic2"></div>
+    <div id="pic3"></div>
+    <div id="disks">
+
+    </div>
+    <div id="base"></div>
+    <script type="text/javascript" src="./js/main.js"></script>
+
+</body>
+
 </html>
