--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <h1 id="title">Tower of Hanoï</h1>
-    <h2 id="won">You won !</h2>
     <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
     <button id="play">Play</button>
+    <h2 id="won">Moves : 0</h2>
     <div id="pic1"></div>
     <div id="pic2"></div>
     <div id="pic3"></div>
