both methods in same branch

--- a/drag-and-drop/public/index.html
+++ b/drag-and-drop/public/index.html
@@ -13,10 +13,18 @@
     <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
     <button id="play">Play</button>
     <h2 id="won">Moves : 0</h2>
-    <div id="pic1"></div>
-    <div id="pic2"></div>
-    <div id="pic3"></div>
-    <div id="disks">
+    <div id="pic1Area">
+    </div>
+    <div id="pic2Area">
+    </div>
+    <div id="pic3Area">
+    </div>
+    <div id="pic1">.
+    </div>
+    <div id="pic2">
+    </div>
+    <div id="pic3">
+    </div>
 
     </div>
     <div id="base"></div>
