change color of disk on hover with raycasting

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <h1 id="title">Tower of Hanoï</h1>
+    <!-- <h1 id="title">Tower of Hanoï</h1>
     <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
     <button id="play">Play</button>
-    <h2 id="won">Moves : 0</h2>
+    <h2 id="won">Moves : 0</h2> -->
     <script src="./js/main.js"></script>
 </body>
 
