--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Tower of Hanoï</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <link rel="stylesheet" type="text/css" href="style/style.css" />
+        <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+    </head>
 
-<head>
-    <title>Tower of Hanoï</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="style/style.css" />
-    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
-</head>
-
-<body>
-    <!-- <h1 id="title">Tower of Hanoï</h1>
-    <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
-    <button id="play">Play</button>
-    <h2 id="won">Moves : 0</h2> -->
-    <script src="./js/main.js"></script>
-</body>
-
+    <body>
+        <input
+            type="number"
+            name="number"
+            min="1"
+            max="7"
+            value="3"
+            id="'towers"
+        />
+        <button id="play">Play</button>
+        <h2 id="won">Moves : 0</h2>
+        <script src="./js/main.js"></script>
+    </body>
 </html>
