can place disk in an bigger area

--- a/2d/drag-and-drop/public/index.html
+++ b/2d/drag-and-drop/public/index.html
@@ -13,19 +13,26 @@
     <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
     <button id="play">Play</button>
     <h2 id="won">Moves : 0</h2>
+    <div id="buttons">
+        <a id="2d" href="https://icepick4.github.io/tower-of-hanoi/2d/click-to-select/public/">Switch to Click To
+            Select</a>
+        <a id="3d" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to 3d</a>
+    </div>
     <div id="pic1Area">
     </div>
     <div id="pic2Area">
     </div>
     <div id="pic3Area">
     </div>
-    <div id="pic1">.
+    <div id="pic1">
     </div>
     <div id="pic2">
     </div>
     <div id="pic3">
     </div>
-
+    <div id="tower0"></div>
+    <div id="tower1"></div>
+    <div id="tower2"></div>
     </div>
     <div id="base"></div>
     <script type="text/javascript" src="./js/main.js"></script>
