--- a/threejs/public/index.html
+++ b/threejs/public/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Tower of Hanoï</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link rel="stylesheet" type="text/css" href="style/style.css" />
-        <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
-    </head>
 
-    <body>
-        <input
-            type="number"
-            name="number"
-            min="1"
-            max="7"
-            value="3"
-            id="'towers"
-        />
-        <button id="play">Play</button>
-        <h2 id="won">Moves : 0</h2>
-        <script src="./js/main.js"></script>
-    </body>
+<head>
+    <title>Tower of Hanoï</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+</head>
+
+<body>
+    <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
+    <button id="play">Play</button>
+    <h2 id="won">Moves : 0</h2>
+    <a id="3d" href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public">Switch to 2d</a>
+    <script src="./js/main.js"></script>
+</body>
+
 </html>
