--- a/2d/click-to-select/public/index.html
+++ b/2d/click-to-select/public/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Tower of Hanoï</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link rel="stylesheet" type="text/css" href="style/style.css" />
-        <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
-    </head>
 
-    <body>
-        <h1 id="title">Tower of Hanoï</h1>
-        <input
-            type="number"
-            name="number"
-            min="1"
-            max="7"
-            value="3"
-            id="'towers"
-        />
-        <button id="play">Play</button>
-        <h2 id="won">Moves : 0</h2>
-        <div id="pic1"></div>
-        <div id="pic2"></div>
-        <div id="pic3"></div>
-        <div id="disks"></div>
-        <div id="base"></div>
-        <script type="text/javascript" src="./js/main.js"></script>
-    </body>
+<head>
+    <title>Tower of Hanoï</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+</head>
+
+<body>
+    <h1 id="title">Tower of Hanoï</h1>
+    <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
+    <button id="play">Play</button>
+    <h2 id="won">Moves : 0</h2>
+    <a id="2d" href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public/">Switch to Drag And Drop</a>
+    <a id="3d" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to 3d</a>
+    <div id="pic1"></div>
+    <div id="pic2"></div>
+    <div id="pic3"></div>
+    <div id="disks"></div>
+    <div id="base"></div>
+    <script type="text/javascript" src="./js/main.js"></script>
+</body>
+
 </html>
