increasing the gameplay (hover pics + opti implementation

--- a/2d/drag-and-drop/public/index.html
+++ b/2d/drag-and-drop/public/index.html
@@ -18,21 +18,21 @@
             Select</a>
         <a id="3d" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to 3d</a>
     </div>
-    <div id="pic1Area">
+    <div id="pic-area-0">
     </div>
-    <div id="pic2Area">
+    <div id="pic-area-1">
     </div>
-    <div id="pic3Area">
+    <div id="pic-area-2">
+    </div>
+    <div id="pic0">
     </div>
     <div id="pic1">
     </div>
     <div id="pic2">
     </div>
-    <div id="pic3">
-    </div>
-    <div id="tower0"></div>
-    <div id="tower1"></div>
-    <div id="tower2"></div>
+    <div id="DROP_AREA0"></div>
+    <div id="DROP_AREA1"></div>
+    <div id="DROP_AREA2"></div>
     </div>
     <div id="base"></div>
     <script type="text/javascript" src="./js/main.js"></script>
