hover underline on buttons

--- a/threejs/public/index.html
+++ b/threejs/public/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
-    <button id="play">Play</button>
+    <button id="play" class="over-underline">Play</button>
     <h2 id="won">Moves : 0</h2>
-    <a id="3d" href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public">Switch to 2d</a>
+    <a id="3d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public">Switch to
+        2d</a>
     <script src="./js/main.js"></script>
 </body>
 
