--- a/2d/click-to-select/public/index.html
+++ b/2d/click-to-select/public/index.html
@@ -11,10 +11,11 @@
 <body>
     <h1 id="title">Tower of Hanoï</h1>
     <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
-    <button id="play">Play</button>
+    <button id="play" class="over-underline">Play</button>
     <h2 id="won">Moves : 0</h2>
-    <a id="2d" href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public/">Switch to Drag And Drop</a>
-    <a id="3d" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to 3d</a>
+    <a id="2d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public/">Switch
+        to Drag And Drop</a>
+    <a id="3d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to 3d</a>
     <div id="pic1"></div>
     <div id="pic2"></div>
     <div id="pic3"></div>
