--- a/2d/drag-and-drop/public/index.html
+++ b/2d/drag-and-drop/public/index.html
@@ -11,12 +11,14 @@
 <body>
     <h1 id="title">Tower of Hanoï</h1>
     <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
-    <button id="play">Play</button>
+    <button id="play" class="over-underline">Play</button>
     <h2 id="won">Moves : 0</h2>
     <div id="buttons">
-        <a id="2d" href="https://icepick4.github.io/tower-of-hanoi/2d/click-to-select/public/">Switch to Click To
+        <a id="2d" class="over-underline"
+            href="https://icepick4.github.io/tower-of-hanoi/2d/click-to-select/public/">Switch to Click To
             Select</a>
-        <a id="3d" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to 3d</a>
+        <a id="3d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to
+            3d</a>
     </div>
     <div id="pic-area-0">
     </div>
