import the favicon in HTML

--- a/2d/click-to-select/public/index.html
+++ b/2d/click-to-select/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style/style.css" />
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
