set div buttons for click-to-select page

--- a/2d/click-to-select/public/index.html
+++ b/2d/click-to-select/public/index.html
@@ -14,9 +14,13 @@
     <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
     <button id="play" class="over-underline">Play</button>
     <h2 id="won">Moves : 0</h2>
-    <a id="2d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public/">Switch
-        to Drag And Drop</a>
-    <a id="3d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to 3d</a>
+    <div id="buttons">
+        <a id="2d" class="over-underline"
+            href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public/">Switch
+            to Drag And Drop</a>
+        <a id="3d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to
+            3d</a>
+    </div>
     <div id="pic1"></div>
     <div id="pic2"></div>
     <div id="pic3"></div>
