implemented cancel last move in each project

--- a/2d/click-to-select/public/index.html
+++ b/2d/click-to-select/public/index.html
@@ -20,6 +20,7 @@
             to Drag And Drop</a>
         <a id="3d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to
             3d</a>
+        <button id="cancel" class="grey">Cancel last move</button>
     </div>
     <div id="pic1"></div>
     <div id="pic2"></div>
