--- a/2d/drag-and-drop/public/index.html
+++ b/2d/drag-and-drop/public/index.html
@@ -20,6 +20,7 @@
             Select</a>
         <a id="3d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to
             3d</a>
+        <button id="cancel" class="grey">Cancel last move</button>
     </div>
     <div id="pic-area-0">
     </div>
