remove html lint

--- a/2d/drag-and-drop/public/index.html
+++ b/2d/drag-and-drop/public/index.html
@@ -11,36 +11,27 @@
 
 <body>
     <h1 id="title">Tower of Hanoï</h1>
-    <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
+    <input type="number" name="number" min="1" max="7" value="3" id="towers" />
     <button id="play" class="over-underline">Play</button>
     <h2 id="won">Moves : 0</h2>
     <div id="buttons">
         <a id="2d" class="over-underline"
-            href="https://icepick4.github.io/tower-of-hanoi/2d/click-to-select/public/">Switch to Click To
-            Select</a>
+            href="https://icepick4.github.io/tower-of-hanoi/2d/click-to-select/public/">Switch to Click To Select</a>
         <a id="3d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/threejs/public/">Switch to
             3d</a>
         <button id="cancel" class="grey">Cancel last move</button>
     </div>
-    <div id="pic-area-0">
-    </div>
-    <div id="pic-area-1">
-    </div>
-    <div id="pic-area-2">
-    </div>
-    <div id="pic0">
-    </div>
-    <div id="pic1">
-    </div>
-    <div id="pic2">
-    </div>
-    <div id="DROP_AREA0"></div>
-    <div id="DROP_AREA1"></div>
-    <div id="DROP_AREA2"></div>
-    </div>
+    <div id="pic-area-0"></div>
+    <div id="pic-area-1"></div>
+    <div id="pic-area-2"></div>
+    <div id="pic0"></div>
+    <div id="pic1"></div>
+    <div id="pic2"></div>
+    <div id="DROP-AREA-0"></div>
+    <div id="DROP-AREA-1"></div>
+    <div id="DROP-AREA-2"></div>
     <div id="base"></div>
     <script type="text/javascript" src="./js/main.js"></script>
-
 </body>
 
 </html>
