--- a/2d/click-to-select/public/index.html
+++ b/2d/click-to-select/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1 id="title">Tower of Hanoï</h1>
-    <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
+    <input type="number" name="number" min="1" max="7" value="3" id="towers" />
     <button id="play" class="over-underline">Play</button>
     <h2 id="won">Moves : 0</h2>
     <div id="buttons">
@@ -22,9 +22,9 @@
             3d</a>
         <button id="cancel" class="grey">Cancel last move</button>
     </div>
-    <div id="pic1"></div>
-    <div id="pic2"></div>
-    <div id="pic3"></div>
+    <div id="pic-area-0"></div>
+    <div id="pic-area-1"></div>
+    <div id="pic-area-2"></div>
     <div id="disks"></div>
     <div id="base"></div>
     <script type="text/javascript" src="./js/main.js"></script>
