--- a/threejs/public/index.html
+++ b/threejs/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1 id="title">Tower of Hanoï</h1>
-    <input type="number" name="number" min="1" max="7" value="3" id="'towers" />
+    <input type="number" name="number" min="1" max="7" value="3" id="towers" />
     <button id="play" class="over-underline">Play</button>
     <h2 id="won">Moves : 0</h2>
     <a id="3d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public">Switch to
