adding new feature : reset cam

--- a/threejs/public/index.html
+++ b/threejs/public/index.html
@@ -17,6 +17,7 @@
     <a id="3d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public">Switch to
         2d</a>
     <button id="cancel" class="grey">Cancel last move</button>
+    <button id="reset-cam">Reset CAMERA</button>
     <script src="./js/main.js"></script>
 </body>
 
