--- a/2d/drag-and-drop/public/index.html
+++ b/2d/drag-and-drop/public/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+    <div class="links">
+        <a href="https://icepick4.github.io/tower-of-hanoi/">
+            <p>Help</p>
+        </a>
+        <a href="https://github.com/icepick4">
+            <img id="github" src="images/github.png" alt="Github" />
+        </a>
+    </div>
     <h1 id="title">Tower of Hanoï</h1>
     <input type="number" name="number" min="1" max="7" value="3" id="towers" />
     <button id="play" class="over-underline">Play</button>
