error on readme + target blank on links

--- a/threejs/public/index.html
+++ b/threejs/public/index.html
@@ -14,7 +14,7 @@
         <a href="https://icepick4.github.io/tower-of-hanoi/">
             <p>Help</p>
         </a>
-        <a href="https://github.com/icepick4">
+        <a href="https://github.com/icepick4" target="_blank">
             <img id="github" src="images/github.png" alt="Github" />
         </a>
     </div>
@@ -22,8 +22,8 @@
     <input type="number" name="number" min="1" max="7" value="3" id="towers" />
     <button id="play" class="over-underline">Play</button>
     <h2 id="won">Moves : 0</h2>
-    <a id="switch-3d" class="over-underline" href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public"
-        target="_blank">Switch to
+    <a id="switch-3d" class="over-underline"
+        href="https://icepick4.github.io/tower-of-hanoi/2d/drag-and-drop/public">Switch to
         2d</a>
     <button id="cancel" class="grey">Cancel last move</button>
     <button id="reset-cam">Reset CAMERA</button>
